--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>HTML ISSUE BOT 9000</title>
 
 <body>
+//headers
 
   <h1>HTML ISSUE BOT 9000 - Checks for Issues<h1>
 
@@ -17,7 +18,7 @@
   <p>4:30pm Issue Bot Lithium-Ion Battery charge, initiate nap sequence on quad couches.</p>
 
   <h2>Issue Bot Tasks</h3>
-
+//lists
   <li>
     <ul>Debug Ruby Labs
     <ul>Massage Joe's Back</ul>
